examples/invalid/tipo_incompativel.mc
int valor;
bool certo = true;

valor = certo;
